fixes about page resizing gap between nav bar and spacer and the spacer and logo at the bottom

--- a/about.css
+++ b/about.css
@@ -76,9 +76,8 @@ body{
 .navBar{
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	width: 100%;
-	height: 16vh;
+	height: auto;
 }
 
 .navBar ul{
@@ -150,7 +149,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 7.5vh;
+	height: auto;
 }
 
 .icon{
@@ -161,7 +160,7 @@ body{
 
 @media (min-width: 500px) {
 	.navBar{
-		height: 5vh;
+		height: auto;
 	}
 
 	.navBar a{
